--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,9 @@ path = "src/main.rs"
 image = { version = "0.25.0", features = ["tiff"] }
 ndarray = { version = "0.15.6", features = ["rayon"] }
 tiff = "0.9.1"
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+opt-level = 3
