--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "image-dwt"
-version = "0.3.2"
+version = "0.4.0"
 edition = "2021"
 authors = ["Anshul Sanghi <anshul@anshulsanghi.tech>"]
 description = "An implementation of the À Trous Discrete Wavelet Transform for images"
@@ -10,6 +10,7 @@ keywords = ["image", "wavelet", "multiscale", "analysis", "atrous"]
 categories = ["multimedia"]
 license = "Apache-2.0"
 readme = "./README.md"
+exclude = ["/pkg", ".*", "/**/.DS_Store"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
